--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,15 +2,10 @@
 nixPkgs = ['nodejs-18_x', 'npm-9_x']
 
 [phases.install]
-cmds = [
-  'npm ci --only=production',
-  'npx prisma generate'
-]
+cmd = 'npm install --only=production'
 
 [phases.build]
-cmds = [
-  'npm run build'
-]
+cmd = 'npm run build'
 
 [start]
 cmd = 'npm start'
