--- a/package.json
+++ b/package.json
@@ -2,19 +2,12 @@
   "name": "gsurveyai",
   "version": "1.0.0",
   "description": "AI-Powered Customer Survey Platform",
-  "main": "server-simple.js",
+  "main": "server-ultra-simple.js",
   "scripts": {
-    "build": "echo 'Build successful - using simple server'",
-    "start": "node server-simple.js"
+    "build": "echo 'Build successful - using ultra simple server'",
+    "start": "node server-ultra-simple.js"
   },
-  "dependencies": {
-    "fastify": "^4.28.1",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/static": "^7.0.4",
-    "openai": "^4.20.1",
-    "groq-sdk": "^0.3.1",
-    "path": "*"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
